...
      </Container>
    );
  }

  return (
    <Container>
      <NavBar testID="back-button-booking-detail" nav="chevron-left" onPress={() => props.navigation.goBack()} />
      <Main testID="booking-detail-scroll-view">
        <MapView
          provider={Platform.OS === 'android' ? PROVIDER_GOOGLE : PROVIDER_DEFAULT}
          style={styles.map}
          minZoomLevel={12}
          maxZoomLevel={15}
          onPress={() => openMaps(selectedSpace.location.latitude, selectedSpace.location.longitude, selectedSpace.title)}
...
        >
          <Marker coordinate={{ latitude: selectedSpace.location.latitude, longitude: selectedSpace.location.longitude }} />
        </MapView>
        <Main2>
          <View style={{ marginBottom: 20 }}>
            <View style={{ flexDirection: "row" }}>
              <Typography.H3 testID="booking-title">{selectedSpace.title} </Typography.H3>
              <Typography.H3 testID="booking-price">(${host ? booking?.price?.hostEarnings : booking?.price?.total_price})</Typography.H3>
            </View>
            <Typography.Sub1>{selectedSpace.spaceType + ' #' + (booking.courtId + 1)}</Typography.Sub1>
            <Typography.pS>{`Address: ${address} ${postcode || ''}`}</Typography.pS>
            <Typography.pS>{selectedSpace.location.user.unit ? `Unit: #${selectedSpace.location.user.unit}` : ''}</Typography.pS>
          </View>
          <HLine />
...
